Removing new Integer and similar constructors (marked for removal) even from the compatibility code; including test JAR to Maven for this library